- Fixed a bug where checkboxes would get stuck drawing

--- a/Blocks/checkbox.css
+++ b/Blocks/checkbox.css
@@ -1,4 +1,4 @@
-﻿input[type="checkbox" i] {
+﻿input[type="checkbox"] {
     background-color: initial;
     cursor: default;
     margin: 0px;
